--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Make youtube-dl executable
-        run: chmod +x ./bin/youtube-dl
+        run: chmod +x ./bin/yt-dlp
 
       - name: Install Git LFS
         run: |
@@ -58,7 +58,7 @@ jobs:
           retry_count=0
           download_success=false
           while [ $retry_count -lt $max_retries ] && [ "$download_success" == "false" ]; do
-            ./bin/youtube-dl -v --config-location config.txt
+            ./bin/yt-dlp -v --config-location config.txt
             if [ $? -eq 0 ]; then
               download_success=true
             else
