--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,36 @@ jobs:
       contents: write
 
     steps:
+      - name: Before freeing up disk space
+        run: |
+          echo "Before freeing up disk space"
+          echo "=============================================================================="
+          df -hT
+          echo "=============================================================================="
+      
+      - name: Maximize build space
+        uses: easimon/maximize-build-space@master
+        with:
+  
+          root-reserve-mb: 2048
+          swap-size-mb: 128
+          remove-dotnet: 'true'
+          remove-haskell: 'true'
+          # 如果空间还是不够用，可以把以下开启，清理出更多空间
+          # remove-android: 'true'
+          # remove-codeql: 'true'
+          build-mount-path: '/var/lib/docker/'
+
+      - name: Restart docker
+        run: sudo service docker restart
+    
+      - name: Free up disk space complete
+        run: |
+          echo "Free up disk space complete"
+          echo "=============================================================================="
+          df -hT
+          echo "=============================================================================="
+
       - name: Clone repository
         uses: actions/checkout@v4
 
@@ -72,11 +102,18 @@ jobs:
             exit 1
           fi
 
-      - name: Commit and push changes
+
+      - name: sync video
         run: |
-          git add .
-          git commit -m "Downloaded youtube video"
-          git push
+          docker run -d --name=aliyunpan-sync -v "./aliyunpan_config.json:/home/app/config/aliyunpan_config.json" -v "./downloads:/home/app/data" -e ALIYUNPAN_PAN_DIR="github_downloads" -e ALIYUNPAN_SYNC_MODE="upload" -e ALIYUNPAN_SYNC_POLICY="increment" -e ALIYUNPAN_SYNC_CYCLE="onetime" -e ALIYUNPAN_SYNC_DRIVE="backup" -e ALIYUNPAN_SYNC_LOG="true" tickstep/aliyunpan-sync:v0.3.4
+
+      - name: check video sync success
+        run: |
+          while docker ps | grep -q "aliyunpan-sync"; do
+              echo "等待视频同步完成"
+              sleep 10
+          done
+          echo "视频同步已完成,登陆云盘检查视频是否上传成功"
 
       - name: Error handling
         if: failure()
